--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@ layout: default
   <h1>{{ site.title }}</h1>
   <hr />
 
-  <ol class="posts">
+  <h2>Recent Posts:</h2>
+  <ul class="posts">
     {% for post in paginator.posts %}
-      <li><a href="{{ post.url }}">{{ post.title }}</a> &raquo; <i><span>{{ post.date | date_to_string }}</span></i></li>
+      <li>{{ post.date | date: "%d/%m/%y" }} &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
     {% endfor %}
-  </ol>
+  </ul>
 
   <!-- Pagination links -->
   {% if paginator.total_pages > 1 %}
