--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
   <h1>{{ site.title }}</h1>
   <hr />
 
-  <h2>Recent Posts:</h2>
+  <h2>Blog posts:</h2>
   <ul class="posts">
     {% for post in paginator.posts %}
       <li>{{ post.date | date: "%d/%m/%y" }} &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
